--- a/SharpZipLib/Assets/package.json
+++ b/SharpZipLib/Assets/package.json
@@ -1,9 +1,9 @@
 {
     "name": "com.realgressa.sharpziplib",
     "displayName": "SharpZipLib",
-    "version": "0.0.3",
+    "version": "1.0.0",
     "unity": "2020.3",
-    "description": "For of SharpZipLib for usage in unity",
+    "description": "Fork of SharpZipLib for usage in unity",
     "keywords": [
         "zip",
         "unity"
